--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "heroku": "^7.0.22",
     "morgan": "^1.9.0",
     "react": "^16.3.2",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-google-maps": "^9.4.5",
     "react-router": "^4.2.0",
