--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@types/markerclustererplus": "^2.1.33",
     "@types/react": "^16.3.13",
     "ajv": "^6.4.0",
+    "axios": "^0.18.0",
+    "bcrypt": "^2.0.1",
     "body-parser-json": "^1.9.2",
     "compression": "^1.7.2",
     "google-map-react": "^1.0.0",
     "google-maps-react": "^2.0.2",
     "heroku": "^7.0.22",
     "morgan": "^1.9.0",
+    "npm": "^6.0.0",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
