--- a/package.json
+++ b/package.json
@@ -3,23 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/googlemaps": "^3.30.8",
-    "@types/markerclustererplus": "^2.1.33",
-    "@types/react": "^16.3.13",
     "ajv": "^6.4.0",
+    "axios": "^0.18.0",
     "body-parser-json": "^1.9.2",
     "compression": "^1.7.2",
-    "google-map-react": "^1.0.0",
-    "google-maps-react": "^2.0.2",
+    "google-maps-react": "^1.1.0",
     "heroku": "^7.0.22",
+    "material-ui": "^0.20.0",
+    "moment": "^2.22.1",
     "morgan": "^1.9.0",
-    "react": "^16.3.2",
+    "react": "^15.6.1",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.3.2",
-    "react-google-maps": "^9.4.5",
+    "react-dom": "^15.6.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.0.13"
   },
   "scripts": {
     "start": "react-scripts start",
