--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "morgan": "^1.9.0",
     "react": "^15.6.1",
     "react-bootstrap": "^0.32.1",
+    "react-bootstrap-datetimepicker": "0.0.22",
+    "react-bootstrap-time-picker": "^1.0.3",
     "react-dom": "^15.6.1",
+    "react-moment": "^0.7.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13"
