--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^15.6.1",
+    "react-places-autocomplete": "^7.1.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13"
