--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "material-ui": "^0.20.0",
     "moment": "^2.22.1",
     "morgan": "^1.9.0",
+    "prop-types": "^15.6.1",
     "react": "^15.6.1",
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-datetimepicker": "0.0.22",
@@ -20,7 +21,8 @@
     "react-places-autocomplete": "^7.1.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.13"
+    "react-scripts": "1.0.13",
+    "react-sidebar": "^2.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
