--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "ajv": "^6.4.0",
+    "aws-sdk": "^2.233.1",
     "axios": "^0.18.0",
+    "bcrypt": "^2.0.1",
     "body-parser-json": "^1.9.2",
     "compression": "^1.7.2",
     "google-maps-react": "^1.1.0",
