--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-datetimepicker": "0.0.22",
     "react-bootstrap-time-picker": "^1.0.3",
+    "react-circular-progressbar": "^0.8.0",
     "react-dom": "^15.6.1",
     "react-places-autocomplete": "^7.1.1",
     "react-router": "^4.2.0",
