--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react-bootstrap-time-picker": "^1.0.3",
     "react-circular-progressbar": "^0.8.0",
     "react-dom": "^15.6.1",
+    "react-image-upload": "0.0.1",
+    "react-images-uploader": "^1.2.0-rc1",
     "react-places-autocomplete": "^7.1.1",
+    "react-progress-button": "^5.1.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
