--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap-time-picker": "^1.0.3",
     "react-circular-progressbar": "^0.8.0",
     "react-dom": "^15.6.1",
+    "react-dropzone": "^4.2.9",
     "react-image-upload": "0.0.1",
     "react-images-uploader": "^1.2.0-rc1",
     "react-places-autocomplete": "^7.1.1",
@@ -28,7 +29,8 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
-    "react-sidebar": "^2.3.2"
+    "react-sidebar": "^2.3.2",
+    "superagent": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
