--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-places-autocomplete": "^7.1.1",
     "react-progress-button": "^5.1.0",
     "react-router": "^4.2.0",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
     "react-sidebar": "^2.3.2",
